# MAX-Viewer

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop-tauri/: package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: main.rs
apps/wasm/: Cargo.toml
apps/wasm/src/: lib.rs
crates/max_viewer_core/: Cargo.toml
crates/max_viewer_core/src/: lib.rs
crates/max_viewer_export/: Cargo.toml
crates/max_viewer_export/src/: lib.rs
crates/max_viewer_hwp/: Cargo.toml
crates/max_viewer_hwp/src/: lib.rs
crates/max_viewer_hwpx/: Cargo.toml
crates/max_viewer_hwpx/src/: lib.rs
crates/max_viewer_layout/: Cargo.toml
crates/max_viewer_layout/src/: lib.rs
crates/max_viewer_markdown/: Cargo.toml
crates/max_viewer_markdown/src/: lib.rs
crates/max_viewer_pdf/: Cargo.toml
crates/max_viewer_pdf/src/: lib.rs
crates/max_viewer_text/: Cargo.toml
crates/max_viewer_text/src/: lib.rs
docs/: README.md  hwp-hwpx-format-research.md  hwpx-hancom-viewer-fidelity-plan.md  plan-floating-text-wrap.md  plan-hwp-docinfo-control.md  plan-rowspan-table-splitting.md  platform-and-tech-stack.md  release-notes-2026-03-28.md  usage-guide.md  viewer-implementation-plan.md
