[workspace]
members = [
  "crates/max_viewer_core",
  "crates/max_viewer_hwpx",
  "crates/max_viewer_hwp",
  "crates/max_viewer_layout",
  "crates/max_viewer_export",
  "apps/desktop-tauri/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["MAX-Viewer Contributors"]

[workspace.dependencies]
base64 = "0.22"
cfb = "0.7"
flate2 = "1"
max_viewer_core = { path = "crates/max_viewer_core" }
max_viewer_hwpx = { path = "crates/max_viewer_hwpx" }
max_viewer_hwp = { path = "crates/max_viewer_hwp" }
max_viewer_layout = { path = "crates/max_viewer_layout" }
max_viewer_export = { path = "crates/max_viewer_export" }
roxmltree = "0.20"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.10.1", features = [] }
tauri-build = { version = "=2.5.6", features = [] }
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
