[package]
name = "max_viewer_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
max_viewer_core.workspace = true
max_viewer_hwpx.workspace = true
max_viewer_hwp.workspace = true
max_viewer_markdown.workspace = true
max_viewer_pdf.workspace = true
max_viewer_export.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
