[package]
name = "max_viewer_desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "max_viewer_desktop"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
max_viewer_core.workspace = true
max_viewer_export.workspace = true
max_viewer_hwp.workspace = true
max_viewer_hwpx.workspace = true
max_viewer_markdown.workspace = true
max_viewer_pdf.workspace = true
max_viewer_layout.workspace = true
base64.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
serde_with = "=3.17.0"
time = "=0.3.44"
